<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_security"
        android:title="@string/menu_security" />

    <item
        android:id="@+id/menu_language"
        android:title="@string/menu_language" />

    <item
        android:id="@+id/menu_date_format"
        android:title="@string/menu_date_format" />

    <item
        android:id="@+id/menu_export"
        android:title="@string/menu_export" />

    <item
        android:id="@+id/menu_import"
        android:title="@string/menu_import" />

    <item
        android:id="@+id/menu_history"
        android:title="@string/menu_history" />

    <item
        android:id="@+id/menu_more_apps"
        android:title="@string/menu_more_apps" />

    <item
        android:id="@+id/menu_exit_admin"
        android:title="@string/menu_enter_admin"
        app:showAsAction="never" />

</menu>