<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_home_contacts_card"
    android:padding="24dp">

    <LinearLayout
        android:id="@+id/alarmContentGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2">

        <TextView
            android:id="@+id/textAlarmTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/alarm_time_preview"
            android:textColor="#000000"
            android:textSize="48sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textCareName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/alarm_care_name_preview"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/layoutReminderItems"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:gravity="center_horizontal"
            android:orientation="vertical" />

        <Button
            android:id="@+id/buttonTaken"
            android:layout_width="220dp"
            android:layout_height="60dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/bg_alarm_snooze_button"
            android:text="@string/alarm_taken"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonSnooze5"
                android:layout_width="90dp"
                android:layout_height="50dp"
                android:layout_margin="6dp"
                android:background="@drawable/bg_alarm_snooze_button"
                android:text="@string/alarm_snooze_5" />

            <Button
                android:id="@+id/buttonSnooze10"
                android:layout_width="90dp"
                android:layout_height="50dp"
                android:layout_margin="6dp"
                android:background="@drawable/bg_alarm_snooze_button"
                android:text="@string/alarm_snooze_10" />

            <Button
                android:id="@+id/buttonSnooze15"
                android:layout_width="90dp"
                android:layout_height="50dp"
                android:layout_margin="6dp"
                android:background="@drawable/bg_alarm_snooze_button"
                android:text="@string/alarm_snooze_15" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
